--- a/docs/postgresql/01.md
+++ b/docs/postgresql/01.md
@@ -75,8 +75,9 @@ psql
 
 ### コマンドの実行
 
-```postgresql
-sample=# \l
+```sql
+\l
+/*
                                                  List of databases
    Name    | Owner | Encoding | Locale Provider |  Collate   |   Ctype    | Locale | ICU Rules | Access privileges 
 -----------+-------+----------+-----------------+------------+------------+--------+-----------+-------------------
@@ -87,30 +88,36 @@ sample=# \l
  template1 | app   | UTF8     | libc            | en_US.utf8 | en_US.utf8 |        |           | =c/app           +
            |       |          |                 |            |            |        |           | app=CTc/app
 (4 rows)
+*/
 
 
-sample=# \c sample
-You are now connected to database "sample" as user "app".
+\c sample
+-- You are now connected to database "sample" as user "app".
 
 
-sample=# \d
+\d
+/*
             List of relations
  Schema |     Name     |   Type   | Owner 
 --------+--------------+----------+-------
  public | users        | table    | app
  public | users_id_seq | sequence | app
 (2 rows)
+*/
 
 
-sample=# \dt
+\dt
+/*
          List of tables
  Schema | Name  | Type  | Owner 
 --------+-------+-------+-------
  public | users | table | app
 (1 row)
+*/
 
 
-sample=# \d users
+\d users
+/*
                                         Table "public.users"
    Column   |            Type             | Collation | Nullable |              Default              
 ------------+-----------------------------+-----------+----------+-----------------------------------
@@ -121,42 +128,51 @@ sample=# \d users
 Indexes:
     "users_pkey" PRIMARY KEY, btree (id)
     "users_email_key" UNIQUE CONSTRAINT, btree (email)
+*/
 
-sample=# \dp users
+\dp users
+/*
                              Access privileges
  Schema | Name  | Type  | Access privileges | Column privileges | Policies 
 --------+-------+-------+-------------------+-------------------+----------
  public | users | table |                   |                   | 
 (1 row)
+*/
 
 
-sample=# \du
+\du
+/*
                              List of roles
  Role name |                         Attributes                         
 -----------+------------------------------------------------------------
  app       | Superuser, Create role, Create DB, Replication, Bypass RLS
+*/
 
-
-sample=# \dn
+\dn
+/*
       List of schemas
   Name  |       Owner       
 --------+-------------------
  public | pg_database_owner
 (1 row)
+*/
 
-
-sample=# \dt+ public.*
+-- 
+\dt+ public.*
+/*
                                      List of tables
  Schema | Name  | Type  | Owner | Persistence | Access method |    Size    | Description 
 --------+-------+-------+-------+-------------+---------------+------------+-------------
  public | users | table | app   | permanent   | heap          | 8192 bytes | 
 (1 row)
+*/
 ```
 
 `\pset` の設定値
 
-```postgresql
-sample=# \pset
+```sql
+\pset
+/*
 border                   1
 columns                  0
 csv_fieldsep             ','
@@ -179,17 +195,19 @@ unicode_border_linestyle single
 unicode_column_linestyle single
 unicode_header_linestyle single
 xheader_width            full
+*/
 ```
 
 
 縦表示に切り替え
 
 
-```postgresql
-sample=# \x on
-Expanded display is on.
+```sql
+\x on
+-- Expanded display is on.
 
-sample=# SELECT * FROM users;
+SELECT * FROM users;
+/*
 -[ RECORD 1 ]----------------------------
 id         | 1
 name       | keita midorikawa
@@ -200,31 +218,34 @@ id         | 2
 name       | taro yamada
 email      | taro.yamada@example.com
 created_at | 2026-01-04 14:29:16.504546
+*/
 ```
 
 CSV形式で出力
 
 
-```postgresql
-sample=# \x auto
-Expanded display is used automatically.
+```sql
+\x auto
+-- Expanded display is used automatically.
 
-sample=# \pset format  -h
-\pset: allowed formats are aligned, asciidoc, csv, html, latex, latex-longtable, troff-ms, unaligned, wrapped0
+\pset format  -h
+-- \pset: allowed formats are aligned, asciidoc, csv, html, latex, latex-longtable, troff-ms, unaligned, wrapped0
 
-sample=# \pset format csv
-Output format is csv.
+\pset format csv
+-- Output format is csv.
 
-sample=# \pset format
-Output format is csv.
+\pset format
+-- Output format is csv.
 
-sample=# SELECT * FROM users;
+SELECT * FROM users;
+/*
 id,name,email,created_at
 1,keita midorikawa,keita.midorikawa@example.com,2026-01-04 14:29:16.504546
 2,taro yamada,taro.yamada@example.com,2026-01-04 14:29:16.504546
+*/
 
 -- もとに戻す
-sample=# \pset format aligned
+\pset format aligned
 ```
 
 
