些細な修正

--- a/docs/postgresql/01.md
+++ b/docs/postgresql/01.md
@@ -251,6 +251,20 @@ id,name,email,created_at
 
 # 1.5 データベース・スキーマ・ユーザーの概念整理
 
+データベース・スキーマ・ユーザーの関係性
+
+```
+PostgreSQLサーバー
+|- データベース (Database)
+| |- スキーマ (Schema)
+|   |- テーブル (Table)
+|   |- ビュー (View)
+|   |- 関数 (Function)
+|   |- インデックス (Index)
+|- ユーザー (User/Role)
+
+```
+
 ## データベースの概念
 
 PostgreSQLにおけるデータベースは、データの集合とその管理環境を指します。  
