--- a/docs/postgresql/02.md
+++ b/docs/postgresql/02.md
@@ -3,6 +3,30 @@
 
 # 2.1 SELEC文の基本構文と実行順序
 
+## SELECT文の基本構文
+
+```sql
+SELECT [ 列名 | 式 | * ]      -- 取得する列名や計算式を指定
+FROM テーブル名                -- データを取得するテーブルやビューを指定
+[WHERE 条件]                  -- 行の絞り込み条件
+[GROUP BY 列名]               -- グルーピングするカラムを指定
+[HAVING 条件]                 -- グループ単位での絞り込み条件
+[ORDER BY 列名 [ASC|DESC]]    -- 結果の並び順
+[LIMIT 数]                    -- 取得する行数の制限
+[OFFSET 数]                   -- 取得開始位置の指定
+```
+
+## SELECT文の実行順序
+
+1. **FROM** 指定したテーブルからデータを取得。JOINもこの段階で処理される。
+1. **WHERE** 取得した行を条件で絞り込み
+1. **GROUP BY** WHEREで絞り込んだ結果をグループ化
+1. **HAVING** グループ化した結果を条件で絞り込み
+1. **SELECT** 取得する列や計算式を選択
+1. **ORDER BY** 結果瀬戸を指定した列で並び替える
+1. **LIMIT / OFFSET** 返却する行数や開始位置を制御
+
+
 # 2.2 WHERE句・ORDER BY・GROUP Byの活用
 
 # 2.3 集約関数とウィンドウ関数
