--- a/docs/postgresql/02.md
+++ b/docs/postgresql/02.md
@@ -990,6 +990,177 @@ WHERE t.rn = 1;
 
 # 2.4 サブクエリとCTE (WITH句)
 
+## サブクエリ
+
+サブクエリとは、SQL文の内部に含まれるSELECT文のことで、主にWHERE句、FROM句、SELECT句の中で使用されます。
+
+### WHERE句
+
+```sql
+-- カテゴリ = 'スマートフォン' の商品の一覧
+SELECT
+  p.name,
+  p.price
+FROM products p
+WHERE category_id IN (
+  SELECT id FROM categories WHERE name = 'スマートフォン'
+);
+--         name         |   price   
+-- ---------------------+-----------
+--  iPhone 15 Pro 256GB | 179800.00
+--  Galaxy S24 Ultra    | 189800.00
+--  Pixel 8 Pro         | 159900.00
+```
+
+### FROM句
+
+```sql
+-- 商品の平均金額が30000円以上のカテゴリを抽出
+SELECT category_name, avg_price::int
+FROM (
+  SELECT
+    max(c.name) AS category_name,
+    AVG(price) AS avg_price
+  FROM products p
+  JOIN categories c ON c.id = p.category_id
+  GROUP BY category_id
+)
+WHERE avg_price > 30000;
+--      category_name      | avg_price 
+-- ------------------------+-----------
+--  バッグ                 |    109860
+--  掃除用品               |     76627
+--  テント・タープ         |     34800
+```
+
+### SELECT句
+
+```sql
+-- 商品名とカテゴリ名の一覧
+SELECT
+  name,
+  (
+    SELECT name
+    FROM categories c
+    WHERE c.id = p.category_id
+  ) AS category_name
+FROM products p;
+--                     name                     |       category_name        
+-- ---------------------------------------------+----------------------------
+--  iPhone 15 Pro 256GB                         | スマートフォン
+--  Galaxy S24 Ultra                            | スマートフォン
+--  Pixel 8 Pro                                 | スマートフォン
+```
+
+
+## CTE (Common Table Expression / WITH句)
+
+CTEはクエリの冒頭で定義する一時的な名前付き結果セットです。  
+
+主な用途:
+- クエリの分割による可読性向上
+- 再利用可能な結果セットの定義
+- 再帰クエリの記述 (階層構造データの取得)
+
+### 基本構文
+
+```sql
+WITH cte_name AS (
+  SELECT ...
+)
+
+SELECT ... FROM cte_name;
+```
+
+### 基本的なCTEの利用
+
+```sql
+-- カテゴリごとの平均価格を求める
+WITH category_avg_price AS (
+  SELECT
+    max(c.name) AS category_name,
+    AVG(price) AS avg_price
+  FROM products p
+  JOIN categories c ON c.id = p.category_id
+  GROUP BY category_id
+)
+
+-- 平均価格が30000円以上のカテゴリを一覧
+SELECT * FROM category_avg_price WHERE avg_price > 30000;
+```
+
+### 再起CTE
+
+再起CTEを利用すると階層構造を取得することができます。
+
+- `UNION ALL` : 再起CTEにおいて **起点** と **再起結果** を結合する役割を持ちます。(テーブルを縦に積み重ねていくイメージ)
+
+
+```sql
+-- 指定したカテゴリを親とする階層構造を取得
+WITH RECURSIVE category_tree AS (
+  -- 起点: 再起の起点となる親カテゴリの取得 (今回は id = 1 のカテゴリが起点)
+  SELECT id, parent_id, 1 AS depth, name
+  FROM categories
+  WHERE id = 1
+
+  UNION ALL  -- 再起結果のテーブルを縦に積み重ねていく
+
+  -- 再起: すでに取得済みのカテゴリ(category_tree)を親に持つ子カテゴリを追加
+  SELECT c.id, c.parent_id, ct.depth + 1, c.name
+  FROM categories c
+  INNER JOIN category_tree ct ON c.parent_id = ct.id
+)
+SELECT * FROM category_tree;
+--  id | parent_id | depth |          name          
+-- ----+-----------+-------+------------------------
+--   1 |           |     1 | 家電
+--   9 |         1 |     2 | モバイル・通信
+--  10 |         1 |     2 | PC・タブレット
+--  11 |         1 |     2 | AV機器
+--  12 |         1 |     2 | カメラ・映像機器
+--  36 |         9 |     3 | スマートフォン
+--  37 |         9 |     3 | スマートウォッチ
+--  38 |         9 |     3 | モバイルアクセサリー
+--  39 |        10 |     3 | ノートPC
+--  40 |        10 |     3 | タブレット
+--  41 |        10 |     3 | PC周辺機器
+--  42 |        11 |     3 | テレビ
+--  43 |        11 |     3 | オーディオ・ヘッドホン
+--  44 |        11 |     3 | スピーカー
+--  45 |        12 |     3 | デジタルカメラ
+--  46 |        12 |     3 | アクションカメラ
+--  47 |        12 |     3 | カメラアクセサリー
+
+-- すべてのカテゴリの階層構造を取得
+WITH RECURSIVE category_tree AS (
+  -- 起点: 再起の起点となる親カテゴリの取得 (今回は id = 1 のカテゴリが起点)
+  SELECT id, parent_id, 1 AS depth, name
+  FROM categories
+  WHERE parent_id IS NULL
+
+  UNION ALL  -- 再起結果のテーブルを縦に積み重ねていく
+
+  -- 再起: すでに取得済みのカテゴリ(category_tree)を親に持つ子カテゴリを追加
+  SELECT c.id, c.parent_id, ct.depth + 1, c.name
+  FROM categories c
+  INNER JOIN category_tree ct ON c.parent_id = ct.id
+)
+SELECT * FROM category_tree;
+```
+
+動作イメージ
+
+```
+1回目: 起点を実行 → {id=1}
+       ↓ UNION ALL
+2回目: 再帰実行 → {id=2, id=3}（parent_id=1の子）
+       ↓ UNION ALL
+3回目: 再帰実行 → {id=5, id=6}（parent_id=2,3の子）
+       ↓ UNION ALL
+4回目: 再帰実行 → 該当なし → 終了
+```
+
 # 2.5 INSERT / UPDATE / DELETE の基本操作
 
 # 2.6 トランザクションとACID特性
