些細な修正

--- a/docs/postgresql/02.md
+++ b/docs/postgresql/02.md
@@ -702,8 +702,10 @@ WHERE sub.price_rank <= 3;
 
 ## フレーム制御（範囲指定）
 
-- *ROWS|RANGE|GROUPS BETWEEN 開始位置 AND 終了位置* : フレーム(分析対象範囲)を *開始位置* から *終了位置* に設定
-- *ROWS|RANGE|GROUPS 開始位置* : フレーム(分析対象範囲)を *開始位置* から *CURRENT ROW* までに設定
+- `ROWS|RANGE|GROUPS BETWEEN 開始位置 AND 終了位置`  
+フレーム(分析対象範囲)を **開始位置** から **終了位置** に設定
+- `ROWS|RANGE|GROUPS 開始位置`  
+フレーム(分析対象範囲)を **開始位置** から **CURRENT ROW** までに設定
 
 ### フレーム単位
 
