insert / update / delete

--- a/docs/postgresql/01_5.md
+++ b/docs/postgresql/01_5.md
@@ -44,6 +44,26 @@
 | TEXT[] | 配列 |
 | UUID | UUID型 |
 
+```sql
+-- JSONBリテラル
+SELECT '{"a": 1, "b": [1, 2, 3], "c": true}'::JSONB;
+--                 jsonb                
+-- -------------------------------------
+--  {"a": 1, "b": [1, 2, 3], "c": true}
+
+-- 配列リテラル  NOTE： 配列のリテラルは {}
+SELECT '{a,b,c}'::TEXT[];
+--   text   
+-- ---------
+--  {a,b,c}
+
+-- UUID
+SELECT gen_random_uuid();
+--            gen_random_uuid            
+-- --------------------------------------
+--  d362dd27-459c-4a96-ad86-e4e5a89fecf0
+```
+
 
 ### カラムへの指定方法
 
