トランザクション

--- a/docs/postgresql/01_5.md
+++ b/docs/postgresql/01_5.md
@@ -131,7 +131,7 @@ CREATE TABLE users (
 );
 ```
 
-## カラムに指定できるパラメータ
+## 制約 (Constrait)
 
 | パラメータ | 説明 |
 | --- | --- |
@@ -208,6 +208,56 @@ CREATE TABLE orders (
   CONSTRAINT fk_product FOREIGN KEY (product_id) PREFERENCES products(id) ON DELETE RESTRICT
 );
 ```
+
+# テーブル値コンストラクタ（table value constructor）
+
+その場で作った集合をテーブルとして扱える機能です。
+
+基本構文
+
+```
+VALUES (v1, v2, ...), ...;
+```
+
+サンプル
+
+```sql
+VALUES (1, 'a'), (2, 'b');
+--  column1 | column2 
+-- ---------+---------
+--        1 | a
+--        2 | b
+```
+
+## 使い所
+
+### `FROM` でテーブルとして扱える
+
+```sql
+SELECT *
+FROM (VALUES (1, 'red'), (2, 'blue'), (3, 'green')) AS colors(id, name);
+--  id | name  
+-- ----+-------
+--   1 | red
+--   2 | blue
+--   3 | green
+```
+
+### `JOIN` の対象に指定できる
+
+```sql
+SELECT o.id, products.id
+FROM orders o
+CROSS JOIN (VALUES (1), (2)) AS products(id);
+--                   id                  | id 
+-- --------------------------------------+----
+--  4e50b027-66e2-4081-8dbf-0c77e009571f |  1
+--  4e50b027-66e2-4081-8dbf-0c77e009571f |  2
+--  8a1f9e40-27ef-4381-adfc-203691b8ad13 |  1
+--  8a1f9e40-27ef-4381-adfc-203691b8ad13 |  2
+```
+
+
 
 # サンプルテーブル
 
