--- a/docs/postgresql/01_5.md
+++ b/docs/postgresql/01_5.md
@@ -3,7 +3,7 @@
 
 # よく使うデータ型
 
-### 数値型
+## 数値型
 
 | 型 | サイズ | 説明 |
 |---|---|---|
@@ -17,7 +17,28 @@
 | `SERIAL` / `SERIAL4` | 4バイト | 自動増分 (1 〜 2,147,483,647) |
 | `BIGSERIAL` / `SERIAL8` | 8バイト | 自動増分 (1 〜 9,223,372,036,854,775,807) |
 
-### 文字列型
+### NUMERIC
+
+`NUMERIC(precision, scale)`:
+- precision=全体の桁数(整数部+小数部)
+- scale=小数点以下の桁数
+
+```sql
+-- NUMERIC
+price NUMERIC(12, 2)   -- 一般的な金額(整数部=10桁, 小数部=2桁) (~99億)
+price NUMERIC(3, 2)    -- 割合(整数部=1桁, 小数部=2桁) (0.00 - 9.99)
+price NUMERIC          -- 度制限なし（任意の桁数を格納可能）
+```
+
+#### SERIAL, INTEGER
+
+```sql
+-- 自動採番（主キー用）
+id SERIAL PRIMARY KEY               -- 旧形式
+id INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY  -- 推奨
+```
+
+## 文字列型
 | 型 | 説明 |
 |----|------|
 | `VARCHAR(n)` | 可変長文字列（最大n文字） |
@@ -25,7 +46,14 @@
 | `TEXT` | 可変長文字列（無制限） |
 
 
-### 日付・時刻型
+
+```sql
+name VARCHAR(100)                   -- 可変長（最大100文字）
+email TEXT                          -- 可変長（無制限）
+code CHAR(5)                        -- 固定長（5文字、空白埋め）
+```
+
+## 日付・時刻型
 
 | 型 | サイズ | 精度 | 説明 |
 |----|--------|------|------|
@@ -35,14 +63,45 @@
 | `TIMETZ` | 12バイト | 1μ秒 14桁 | 時刻（タイムゾーン付き） |
 | `TIME` | 8バイト | 1μ秒 14桁 | 時刻のみ（タイムゾーンなし） |
 
-### その他よく使う型
+```sql
+created_at TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP  -- 日時(タイムゾーン付き) (推奨) (CURRENT_TIMESTAMP は now()でもOK)
+birth_date DATE                      -- 日時のみ
+start_time TIMEZ                     -- 時刻のみ
+```
+
+### `now()` と `CURRENT_TIMESTAMP` の違い:
+|  | `now()` | `CURRENT_TIMESTAMP` |
+|------|---------|---------------------|
+| 種類 | 関数 | SQL標準キーワード |
+| 精度指定 | 不可 | 可能 <br>`CURRENT_TIMESTAMP(0)`: 秒まで<br>`CURRENT_TIMESTAMP(3)`: ミリ秒まで |
+| 可搬性 | PostgreSQL固有 | SQL標準（他DBでも動く） |
+
+
+## 真偽値
 
 | 型 | 説明 |
 |----|------|
 | BOOLEAN | 真偽値 |
+
+```sql
+is_active BOOLEAN DEFAULT true       -- 真偽値
+```
+
+## PostgreSQL特有のデータ型
+
+| 型 | 説明 |
+|----|------|
 | JSONB | JSONデータ(インデックス可能) |
-| TEXT[] | 配列 |
+| ARRAY | 配列型。 `INT[]` や `TEXT[]` のように指定する  |
 | UUID | UUID型 |
+
+```sql
+metadata JSONB                       -- JSONデータ（インデックス可能）
+tags TEXT[]                          -- 配列
+uuid_col UUID DEFAULT gen_random_uuid()  -- UUID
+```
+
+### リテラル
 
 ```sql
 -- JSONBリテラル
@@ -64,60 +123,125 @@ SELECT gen_random_uuid();
 --  d362dd27-459c-4a96-ad86-e4e5a89fecf0
 ```
 
+## ENUM型
 
-### カラムへの指定方法
-
-#### NUMERIC
-- `NUMERIC(precision, scale)` 
-    - precision=全体の桁数(整数部+小数部)
-    - scale=小数点以下の桁数
+Enum型は、取り得る値をあらかじめ定義することで、データの整合性を矯正するデータ型です。
 
 ```sql
--- NUMERIC
-price NUMERIC(12, 2)   -- 一般的な金額(整数部=10桁, 小数部=2桁) (~99億)
-price NUMERIC(3, 2)    -- 割合(整数部=1桁, 小数部=2桁) (0.00 - 9.99)
-price NUMERIC          -- 度制限なし（任意の桁数を格納可能）
+-- ENUM型の定義
+CREATE TYPE user_status AS ENUM (
+  'active',
+  'inactive',
+  'suspended'
+);
+
+-- テーブル定義で使う
+CREATE TABLE tmp_users (
+  id SERIAL PRIMARY KEY,
+  email TEXT NOT NULL,
+  status user_status NOT NULL DEFAULT 'active'
+);
+
+-- 登録
+INSERT INTO users (email, status) VALUES ('hoge@example.com', 'active');
+
+
+-- 確認
+select * from users;
+--  id |      email       | status 
+-- ----+------------------+--------
+--   1 | hoge@example.com | active
 ```
 
-#### SERIAL, INTEGER
+#### `CHECK` 制約でデータを検証する方法もある
+※ 変更が頻繁に起きそうならこっち
 
 ```sql
--- 自動採番（主キー用）
-id SERIAL PRIMARY KEY               -- 旧形式
-id INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY  -- 推奨
+CREATE TABLE users (
+  id SERIAL PRIMARY KEY,
+  email TEXT NOT NULL,
+  status TEXT NOT NULL DEFAULT 'active' CHECK (status IN ('active','inactive','suspended'))
+);
 ```
 
-#### 文字列型
+## DOMAIN型
+
+https://www.postgresql.jp/document/17/html/sql-createdomain.html
+
+DOMAIN型は既存のデータ型に対して制約を更かした「カスタム型」です。
 
 ```sql
-name VARCHAR(100)                   -- 可変長（最大100文字）
-email TEXT                          -- 可変長（無制限）
-code CHAR(5)                        -- 固定長（5文字、空白埋め）
+-- DOMAIN型の定義
+CREATE DOMAIN positive_int AS INT CHECK (VALUE > 0);
+
+
+-- テーブル定義で使う
+CREATE TABLE items (
+  id INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
+  name VARCHAR(100) NOT NULL,
+  price positive_int NOT NULL
+);
+
+-- 登録
+INSERT INTO items (name, price) VALUES ('a', 100);
+
+-- 制約に違反するとエラーになる
+INSERT INTO items (name, price) VALUES ('b', 0);
+-- ERROR:  value for domain positive_int violates check constraint "positive_int_check"
+
+
+-- 確認
+select * from items;
+--  id | name | price 
+-- ----+------+-------
+--   1 | a    |   100
 ```
-#### 日付・時刻型
+
+## SEQUENCE
+
+https://www.postgresql.jp/document/17/html/sql-createsequence.html
+
+SEQUENCEは、自動的に連番を生成するオブジェクトで、主キーやIDの生成に利用されます。  
+SERIALやBIGSERIALも内部的にはシーケンスを利用しています。
+
+NOTE: トランザクションのロールバック時などでギャップが発生する場合があります。
+
 
 ```sql
-created_at TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP  -- 日時 (タイムゾーン付き、推奨) 
-                                                  -- CURRENT_TIMESTAMP は now()でもOK
-birth_date DATE                      -- 日時のみ
-start_time TIMEZ                     -- 時刻のみ
+-- シーケンスの定義
+CREATE SEQUENCE order_seq
+  START 1000
+  INCREMENT 1
+  NO MINVALUE
+  NO MAXVALUE
+  CACHE 1;
+
+
+-- テーブル作成
+CREATE TABLE notes (
+  id INTEGER PRIMARY KEY,
+  name VARCHAR(100) NOT NULL,
+  content TEXT NOT NULL DEFAULT ''
+);
+
+
+-- 登録
+INSERT INTO notes (id, name)
+VALUES
+  (nextval('order_seq'), 'title_1'),
+  (nextval('order_seq'), 'title_2'),
+  (nextval('order_seq'), 'title_3');
+
+-- 確認
+SELECT * FROM notes;
+--   id  |  name   | content 
+-- ------+---------+---------
+--  1000 | title_1 | 
+--  1001 | title_2 | 
+--  1002 | title_3 | 
 ```
 
-`now()` と `CURRENT_TIMESTAMP` の違い:
-| 項目 | `now()` | `CURRENT_TIMESTAMP` |
-|------|---------|---------------------|
-| 種類 | 関数 | SQL標準キーワード |
-| 精度指定 | 不可 | 可能 <br>`CURRENT_TIMESTAMP(0)`: 秒まで<br>`CURRENT_TIMESTAMP(3)`: ミリ秒まで |
-| 可搬性 | PostgreSQL固有 | SQL標準（他DBでも動く） |
 
-#### その他のデータ型
-
-```sql
-is_active BOOLEAN DEFAULT true       -- 真偽値
-metadata JSONB                       -- JSONデータ（インデックス可能）
-tags TEXT[]                          -- 配列
-uuid_col UUID DEFAULT gen_random_uuid()  -- UUID
-```
 
 # CREATE TABLE
 
