--- a/docs/postgresql/01_5.md
+++ b/docs/postgresql/01_5.md
@@ -87,21 +87,11 @@ start_time TIMEZ                     -- 時刻のみ
 is_active BOOLEAN DEFAULT true       -- 真偽値
 ```
 
-## PostgreSQL特有のデータ型
+## JSONB・JSON型
 
-| 型 | 説明 |
-|----|------|
-| JSONB | JSONデータ(インデックス可能) |
-| ARRAY | 配列型。 `INT[]` や `TEXT[]` のように指定する  |
-| UUID | UUID型 |
+PostgreSQLはJSON形式のデータを扱うためのデータ型としてJSONB型とJSON型を用意しています。  
+JSONB型はインデックス可能です。
 
-```sql
-metadata JSONB                       -- JSONデータ（インデックス可能）
-tags TEXT[]                          -- 配列
-uuid_col UUID DEFAULT gen_random_uuid()  -- UUID
-```
-
-### リテラル
 
 ```sql
 -- JSONBリテラル
@@ -110,18 +100,120 @@ SELECT '{"a": 1, "b": [1, 2, 3], "c": true}'::JSONB;
 -- -------------------------------------
 --  {"a": 1, "b": [1, 2, 3], "c": true}
 
+-- テーブル作成
+CREATE TABLE products_1 (
+  id SERIAL PRIMARY KEY,
+  name TEXT NOT NULL,
+  attributes JSONB
+);
+
+-- JSONデータを登録
+INSERT INTO products_1 (name, attributes)
+VALUES
+  ('iPhone 15 Pro 256GB', '{"brand": "Apple", "color": "ナチュラルチタニウム", "storage": "256GB"}'),
+  ('Galaxy S24 Ultra', '{"brand": "Samsung", "color": "チタニウムブラック", "storage": "512GB"}'),
+  ('Pixel 8 Pro', '{"brand": "Google", "color": "Obsidian", "storage": "256GB"}');
+
+-- カラムにJSONのパスを指定
+SELECT name, attributes->>'brand' AS brand FROM products_1;
+--         name         |  brand  
+-- ---------------------+---------
+--  iPhone 15 Pro 256GB | Apple
+--  Galaxy S24 Ultra    | Samsung
+--  Pixel 8 Pro         | Google
+
+-- WHERE句でJSONの値で絞り込み
+SELECT * FROM products_1 WHERE attributes->>'brand' = 'Apple';
+--  id |        name         |                               attributes                                
+-- ----+---------------------+-------------------------------------------------------------------------
+--   1 | iPhone 15 Pro 256GB | {"brand": "Apple", "color": "ナチュラルチタニウム", "storage": "256GB"}
+```
+
+
+```sql
+tags TEXT[]                          -- 配列
+uuid_col UUID DEFAULT gen_random_uuid()  -- UUID
+```
+
+## ARRAY型
+
+ARRAY型はPostgreSQL特有のデータ型で、複数の値を配列として格納できます。
+
+```sql
 -- 配列リテラル  NOTE： 配列のリテラルは {}
 SELECT '{a,b,c}'::TEXT[];
 --   text   
 -- ---------
 --  {a,b,c}
+SELECT ARRAY[101, 102, 103];
+--      array     
+-- ---------------
+--  {101,102,103}
 
+-- テーブルの作成
+CREATE TABLE orders_1 (
+  id SERIAL PRIMARY KEY,
+  customer_id INT NOT NULL,
+  product_ids INT[]
+);
+
+-- ARRAYデータの挿入
+INSERT INTO orders_1 (customer_id, product_ids)
+VALUES
+  (1, ARRAY[101, 102, 103]),
+  (2, '{10, 20, 30}'::INT[]);
+
+-- WHERE句でARRAYデータを指定
+-- NOTE: 値 = ANY(配列) は "配列の要素が一つでも値と等しければ" という意味
+SELECT * FROM orders_1 WHERE 102 = ANY(product_ids);
+--  id | customer_id |  product_ids  
+-- ----+-------------+---------------
+--   1 |           1 | {101,102,103}
+```
+
+### `値 = ANY(配列)` 
+
+`ANY` は `値 = ANY(配列)` という使われ方をする比較演算子で `=` や `>` 等といった比較演算子と同じ扱いをします。
+
+```sql
+-- これと...
+WHERE 100 = ANY(amount_array)
+
+-- ...これは同じ意味
+WHERE (100 = amount_array[1])
+   OR (100 = amount_array[2])
+   OR (100 = amount_array[3]) ...
+```
+
+
+## UUID型
+
+UUID型は128bitの一意識別子です。
+
+```sql
 -- UUID
 SELECT gen_random_uuid();
 --            gen_random_uuid            
 -- --------------------------------------
 --  d362dd27-459c-4a96-ad86-e4e5a89fecf0
+
+
+CREATE TABLE users_1 (
+  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+  name TEXT NOT NULL
+);
+
+INSERT INTO users_1 (name) VALUES ('田中将大'), ('ダルビッシュ有');
+
+SELECT * FROM users_1;
+--                   id                  |      name      
+-- --------------------------------------+----------------
+--  eb177e84-af5d-4870-a750-0f7d6127c4f5 | 田中将大
+--  cef72431-1f81-4afc-be08-0ec962930232 | ダルビッシュ有
 ```
+
+
+
 
 ## ENUM型
 
