--- a/docs/postgresql/02.md
+++ b/docs/postgresql/02.md
@@ -346,6 +346,16 @@ SELECT jsonb_extract_path_text(data, 'tags') AS tags FROM sample_data_json;
 -- ------------------------
 --  ["admin", "developer"]
 
+-- WHERE句でJSONの絞り込み
+SELECT id, name, attributes FROM products WHERE attributes->>'brand' = 'Apple';
+--                   id                  |            name             |                                     attributes                                     
+-- --------------------------------------+-----------------------------+------------------------------------------------------------------------------------
+--  5e5de64b-ab6a-4203-9b1a-6af68602e315 | iPhone 15 Pro 256GB         | {"brand": "Apple", "color": "ナチュラルチタニウム", "storage": "256GB"}
+--  124874fd-31f8-40b5-a704-f767b2c94d53 | iPhone SE (第3世代)         | {"brand": "Apple", "color": "ミッドナイト", "storage": "64GB"}
+--  df9bf7e7-25f2-4eaa-a90a-a9b55978e70d | Apple Watch Series 9        | {"size": "45mm", "brand": "Apple", "color": "ミッドナイト"}
+--  7a777ace-71db-47ee-b05b-84557272d56e | Apple Watch Ultra 2         | {"size": "49mm", "brand": "Apple", "color": "チタニウム"}
+
+
 -- 値の型
 select jsonb_typeof(data->'tags') from sample_data_json;
 --  jsonb_typeof 
