些細な修正

--- a/docs/postgresql/01_5.md
+++ b/docs/postgresql/01_5.md
@@ -427,13 +427,16 @@ CREATE TABLE orders (
 
 # パーティショニング (Partitioning)
 
-パーティショニングはテーブルを複数の小さなパーティションに分割する手法であり、大量のデータが存在する場合にデータアクセスの効率化やパフォーマンス向上を目的に利用されます。
+パーティショニングはテーブルを複数の小さなパーティションに分割する手法であり、大量のデータが存在する場合にデータアクセスの効率化やパフォーマンス向上を目的に利用されます。  
+大規模データやアーカイブ用途に向いています。ログや時系列データ、売上データなど、大量に蓄積されるデータで有効です。
 
 特徴:
 - テーブルを物理的に複数分割
 - クエリ実行時に対象のパーティションのみを検索 (パーティションプルーニング)
 - データ管理 (バックアップ、アーカイブ、削除)が効率化
 - 大規模データベースのパフォーマンス向上
+
+
 
 
 ## パーティショニング方式
@@ -479,7 +482,7 @@ SELECT * FROM sales WHERE sale_date = '2025-05-10';
 # 継承テーブル (Table Inheritance)
 
 継承テーブルは、あるテーブルを親として、そこから派生するテーブルを作成できます。  
-正直使い所がわからない
+共通カラムの再利用や柔軟な拡張が求められる場合に有効。複雑なデータ構造やオブジェクト指向的設計を取り入れる場面で活用されます。
 
 ```sql
 -- 親テーブル
