些細な修正

--- a/docs/postgresql/04.md
+++ b/docs/postgresql/04.md
@@ -421,33 +421,42 @@ CREATE INDEX idx_stores_location ON convenience_stores USING gist (location);
 
 -- 半径検索（Radius Search）
 -- 東京駅(139.767, 35.681)から2000m以内の店舗
-SELECT 
-    name, 
-    -- 距離も表示（メートル）
-    ST_Distance(location, ST_MakePoint(139.767125, 35.681236)::geography) AS distance_m
-FROM 
-    convenience_stores
-WHERE 
-    ST_DWithin(
-        location, 
-        ST_MakePoint(139.767125, 35.681236)::geography, 
-        2000 -- 2000メートル
-    )
-ORDER BY 
-    distance_m;
-
+SELECT
+  name,
+  -- 距離も表示（メートル）
+  ST_Distance(location, ST_MakePoint(139.767125, 35.681236)::geography) AS distance_m
+FROM
+  convenience_stores
+WHERE
+  ST_DWithin(
+    location,
+    ST_MakePoint(139.767125, 35.681236)::geography,
+    2000 -- 2000メートル
+  )
+ORDER BY
+  distance_m;
+--            name           |  distance_m   
+-- --------------------------+---------------
+--  セブン-イレブン 東京駅店 |             0
+--  ローソン 有楽町店        |  786.24457073
+--  ファミマ 秋葉原店        | 1961.35852331
 
 -- 近傍探索（KNN: K-Nearest Neighbors）
 -- 現在地から 近い順に3件 取得する
-SELECT 
-    name,
-    ST_Distance(location, ST_MakePoint(139.767125, 35.681236)::geography) AS distance_m
-FROM 
-    convenience_stores
-ORDER BY 
-    -- 距離演算子（近い順にソート）
-    location <-> ST_MakePoint(139.767125, 35.681236)::geography
+SELECT
+  name,
+  ST_Distance(location, ST_MakePoint(139.767125, 35.681236)::geography) AS distance_m
+FROM
+  convenience_stores
+ORDER BY
+  -- 距離演算子（近い順にソート）
+  location <-> ST_MakePoint(139.767125, 35.681236)::geography
 LIMIT 3;
+--            name           |  distance_m   
+-- --------------------------+---------------
+--  セブン-イレブン 東京駅店 |             0
+--  ローソン 有楽町店        |  786.24457073
+--  ファミマ 秋葉原店        | 1961.35852331
 ```
 
 ## BRIN インデックス (Block Range INdex)
