些細な修正

--- a/docs/postgresql/04.md
+++ b/docs/postgresql/04.md
@@ -459,6 +459,22 @@ LIMIT 3;
 --  ファミマ 秋葉原店        | 1961.35852331
 ```
 
+
+1. **データを作る (MakePoint & SetSRID)**  
+「経度139度、緯度35度」というただの数字を、PostGISが理解できる形式に変換します。
+    - `ST_SetSRID(ST_MakePoint(139.76, 35.68), 4326)` (経度(x), 緯度(y) の順)
+      - `ST_MakePoint(x, y)` : 点を作る
+      - `ST_SetSRID(..., 4326)` : それに「WGS84（GPSの世界標準）」というタグを付ける
+2. **検索する (ST_DWithin)**  
+「半径2km以内のお店」を探すときなどに使います。
+    - `WHERE ST_DWithin(location, ST_SetSRID(...), 2000)`
+      - `ST_Distance(a, b) < 2000` と書いてしまうとインデックスが使われないため非常に遅い
+3. **表示する (ST_Distance)**  
+結果として「ここから何メートル」と表示したり、「近い順」に並べるときに使います。
+    - `SELECT ST_Distance(location, ST_SetSRID(...)) AS meter`
+    - `ORDER BY meter ASC`
+
+
 ## BRIN インデックス (Block Range INdex)
 
 超巨大なテーブルに対して、非常に小さなサイズで作成できるインデックスです。
